# 4ward

./: .bazelrc  404.html  AGENTS.md  BUILD.bazel  CPPLINT.cfg  MODULE.bazel  README.md  detekt.yml  index.html  mkdocs.yml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
bazel/: BUILD.bazel  Runfiles.kt  behavioral_model.patch  cc_shim.bzl  fourward_pipeline.bzl  golden_test.cc  golden_test.h  golden_test_main.cc  p4lang_pi.patch  rules_kotlin_return_value_checker.patch  z3.patch
bazel/snippets/: behavioral_model.BUILD.bazel  behavioral_model.MODULE.bazel  p4lang_pi.MODULE.bazel  p4lang_pi.gnmi.BUILD
bcr_test_module/: .bazelrc  MODULE.bazel  README.md
cli/: BUILD.bazel  Main.kt  NetworkServe.kt  NetworkServeTest.kt  Simulate.kt  TraceFormatter.kt  TraceFormatterTest.kt
concepts/architecture-modifications/: index.html
designs/: dataplane_port_encoding.md  dvaas_integration.md  intrinsic_ports.md  multi_device_server.md  network_simulation.md  p4runtime_diff.md  packet_io.md  parallel_packet_scaling.md  reproduce_trace.md  trace_tree_outcomes.md
docs/: ARCHITECTURE.md  COMPATIBILITY.md  CONTRIBUTING.md  ENTRY_POINTS.md  LIMITATIONS.md  P4RUNTIME_COMPLIANCE.md  PERFORMANCE.md  README.md  REFACTORING.md  ROADMAP.md  STATUS.md  TESTING_STRATEGY.md
e2e_tests/: BUILD.bazel  InlineP4Compiler.kt  bmv2_diff.bzl  p4testgen.bzl
e2e_tests/basic_table/: BUILD.bazel
e2e_tests/p4_fuzzer/: BUILD.bazel  fuzzer_table.p4  p4_fuzzer_test.cc
e2e_tests/p4runtime_diff/: BUILD.bazel  Bmv2P4RuntimeRunner.kt  FourwardP4RuntimeRunner.kt  P4RuntimeDiffActionProfileTest.kt  P4RuntimeDiffScenariosTest.kt  P4RuntimeDiffSmokeTest.kt  P4RuntimeDiffValueSetTest.kt  P4RuntimeRunner.kt  P4RuntimeStatus.kt  README.md  ResponseDiff.kt  ResponseDiffTest.kt  value_set.p4
e2e_tests/passthrough/: BUILD.bazel
e2e_tests/translated_type/: BUILD.bazel
e2e_tests/translation_round_trip/: BUILD.bazel  round_trip.p4
examples/: index.html  tutorial.t
fourward_cc/: BUILD.bazel  README.md  dataplane_client.cc  dataplane_client.h  dataplane_client_e2e_test.cc  dataplane_client_test.cc  dataplane_matchers.cc  dataplane_matchers.h  dataplane_matchers_flag_test.cc  dataplane_matchers_test.cc  fourward_server.cc  fourward_server.h  fourward_server_test.cc  grpc_util.h  management_client.cc  management_client.h  management_client_test.cc  network_client.cc  network_client.h  network_client_test.cc  output_capture.cc  output_capture.h  output_capture_test.cc  test_util.h
fourward_cc/golden_matcher_failures/: compact_trace.golden.txt  on_ports_cpu_name_mismatch.golden.txt  payload_mismatch.golden.txt  wrong_port.golden.txt
grpc/: BUILD.bazel  BitLevelSerializationTest.kt  Bytestrings.kt  BytestringsTest.kt  ConstraintValidator.kt  ConstraintValidatorTest.kt  DataplaneBenchmark.kt  DataplaneService.kt  DataplaneServiceTest.kt  DeviceContext.kt  DeviceRegistry.kt  DisableCheckingTest.kt  EnrichedTraceGoldenTest.kt  EntityReader.kt  EntityReaderTest.kt  FourwardServer.kt  FourwardTestHarness.kt  GoldenErrorTest.kt  InlineP4Compiler.kt  InlineP4CompilerTest.kt  ManagementService.kt  MultiDeviceDataplaneService.kt  MultiDeviceP4RuntimeService.kt  MultiDeviceScaleBenchmark.kt  MultiDeviceServiceTest.kt  NetworkService.kt  NetworkServiceTest.kt  NetworkTopology.kt  P4RuntimeConformanceTest.kt  P4RuntimeConstraintTest.kt  P4RuntimeService.kt  P4RuntimeServiceTest.kt  P4RuntimeTranslationTest.kt  P4RuntimeWriteErrorTest.kt  PacketBroker.kt  PacketBrokerTest.kt  PacketHeaderCodec.kt  PacketHeaderCodecTest.kt  PortOverrideTest.kt  README.md  (+18 more)
grpc/golden_errors/: invalid-device-config.golden.txt  p4rt-cpu-port-no-mapping.golden.txt  p4rt-cpu-port-no-translation.golden.txt  unknown-table-id.golden.txt
main/: coverage.lcov  index-sort-f.html  index-sort-l.html  index.html
p4c_backend/: BUILD.bazel  backend.cpp  backend.h  main.cpp  options.cpp  options.h
p4runtime/: BUILD.bazel  ConstraintValidator.kt  ConstraintValidatorTest.kt  DataplaneBenchmark.kt  DataplaneService.kt  DataplaneServiceTest.kt  DisableCheckingTest.kt  EnrichedTraceGoldenTest.kt  GoldenErrorTest.kt  P4RuntimeConformanceTest.kt  P4RuntimeConstraintTest.kt  P4RuntimeServer.kt  P4RuntimeService.kt  P4RuntimeTestHarness.kt  P4RuntimeTranslationTest.kt  P4RuntimeWriteErrorTest.kt  PacketBroker.kt  PacketBrokerTest.kt  PacketHeaderCodec.kt  PacketHeaderCodecTest.kt  RoundTripTest.kt  SaiP4ConstraintTest.kt  SaiP4E2ETest.kt  TraceEnricher.kt  TraceEnricherTest.kt  TypeTranslator.kt  TypeTranslatorTest.kt  constraint_validator.cpp  constraint_validator.proto
p4runtime_cc/: BUILD.bazel  dataplane_client.cc  dataplane_client.h  dataplane_client_e2e_test.cc  dataplane_client_test.cc  dataplane_matchers.h  dataplane_matchers_test.cc  fourward_server.cc  fourward_server.h  fourward_server_test.cc  fourward_wrapper.cc  fourward_wrapper.h  fourward_wrapper_test.cc
search/: search_index.json
simulator/: Architecture.kt  ArchitectureHelpers.kt  BUILD.bazel  BitAccumulator.kt  BitVectorTest.kt  DataplanePort.kt  DefaultValues.kt  DefaultValuesTest.kt  DirectResourceUsage.kt  DirectResourceUsageTest.kt  Environment.kt  EnvironmentTest.kt  ExternHandler.kt  Hash.kt  Interpreter.kt  InterpreterControlTest.kt  InterpreterExprTest.kt  InterpreterInlineActionTest.kt  InterpreterPacketTest.kt  InterpreterParserTest.kt  InterpreterTestDsl.kt  InterpreterTraceEventTest.kt  NetworkSimulator.kt  PNAArchitecture.kt  PNAArchitectureTest.kt  PSAArchitecture.kt  PSAArchitectureTest.kt  PacketBits.kt  PacketBitsTest.kt  RegisterReadCapture.kt  ReproducerExtractor.kt  ReproducerExtractorTest.kt  Simulator.kt  SimulatorTest.kt  TableDataReader.kt  TableStore.kt  TableStoreBindingsTest.kt  TableStoreTest.kt  TraceHelpers.kt  V1ModelArchitecture.kt  (+7 more)
stf/: Runner.kt
tools/: BUILD.bazel  coverage.sh  dev.sh  lint.sh  regenerate_patches.sh
userdocs/: README.md  examples.md  index.md
web/: BUILD.bazel  ControlGraphExtractor.kt  ControlGraphExtractorTest.kt  ParserGraphExtractor.kt  ParserGraphExtractorTest.kt  PlaygroundServer.kt  WebServer.kt  WebServerTest.kt
(+262 files in other folders)
