load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")
load("@rules_license//rules:license.bzl", "license")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

package(
    default_applicable_licenses = [":license"],
    licenses = ["notice"],
)

exports_files(["LICENSE"])

license(
    name = "license",
    package_name = "fourward",
    license_kinds = ["@rules_license//licenses/spdx:Apache-2.0"],
    license_text = "LICENSE",
)

# Exposes .clang-tidy to the bazel_clang_tidy aspect.
filegroup(
    name = "clang_tidy_config",
    srcs = [".clang-tidy"],
    visibility = ["//visibility:public"],
)

kt_jvm_binary(
    name = "ktfmt",
    main_class = "com.facebook.ktfmt.cli.Main",
    runtime_deps = ["@fourward_maven//:com_facebook_ktfmt"],
)

kt_jvm_binary(
    name = "detekt",
    main_class = "io.gitlab.arturbosch.detekt.cli.Main",
    runtime_deps = ["@fourward_maven//:io_gitlab_arturbosch_detekt_detekt_cli"],
)

# cpplint: enforces Google C++ Style Guide rules that clang-tidy doesn't
# (header guards, IWYU hygiene, copyright, etc.). Invoked from
# tools/lint.sh; CPPLINT.cfg at repo root configures filters.
py_console_script_binary(
    name = "cpplint",
    pkg = "@pip//cpplint",
)
