load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library", "kt_jvm_test")

package(
    default_applicable_licenses = ["//:license"],
    licenses = ["notice"],
)

exports_files(
    ["run_cram.py"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "cram_bzl",
    srcs = ["cram.bzl"],
    visibility = [
        "//cli:__subpackages__",
        "//examples:__subpackages__",
    ],
    deps = ["@rules_python//python:py_test_bzl"],
)

kt_jvm_library(
    name = "cli",
    srcs = glob(
        ["*.kt"],
        exclude = ["*Test.kt"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//bazel:runfiles",
        "//grpc",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:simulator_java_proto",
        "//stf",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:com_google_protobuf_protobuf_java_util",
    ],
)

kt_jvm_binary(
    name = "4ward",
    data = [
        "//p4c_backend:p4c-4ward",
        "@p4c//p4include",
        "@p4c//p4include:core.p4",
    ],
    jvm_flags = [
        "-Dfourward.p4include=$(rlocationpath @p4c//p4include:core.p4)",
    ],
    main_class = "fourward.cli.MainKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":cli"],
)

kt_jvm_test(
    name = "TraceFormatterTest",
    srcs = ["TraceFormatterTest.kt"],
    test_class = "fourward.cli.TraceFormatterTest",
    deps = [
        ":cli",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)
