load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_applicable_licenses = ["//:license"],
    licenses = ["notice"],
)

cc_library(
    name = "output_capture",
    srcs = ["output_capture.cc"],
    hdrs = ["output_capture.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/synchronization",
    ],
)

cc_library(
    name = "fourward_server",
    srcs = ["fourward_server.cc"],
    hdrs = ["fourward_server.h"],
    data = ["//grpc:fourward_server"],
    # Runfile path baked in per build for BCR portability — the apparent
    # repo name differs between root and BCR consumers.
    local_defines = [
        'FOURWARD_SERVER_RLOCATION=\\"$(rlocationpath //grpc:fourward_server)\\"',
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":output_capture",
        "//grpc:dataplane_cc_grpc",
        "//grpc:dataplane_cc_proto",
        "//grpc:management_cc_grpc",
        "//grpc:management_cc_proto",
        "@abseil-cpp//absl/cleanup",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/time",
        "@bazel_tools//tools/cpp/runfiles",
        "@grpc//:grpc++",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
    ],
)

cc_library(
    name = "management_client",
    srcs = ["management_client.cc"],
    hdrs = ["management_client.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":fourward_server",
        "//grpc:management_cc_grpc",
        "//grpc:management_cc_proto",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/time",
        "@grpc//:grpc++",
    ],
)

cc_library(
    name = "dataplane_client",
    srcs = ["dataplane_client.cc"],
    hdrs = ["dataplane_client.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":fourward_server",
        "//grpc:dataplane_cc_grpc",
        "//grpc:dataplane_cc_proto",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/synchronization",
        "@abseil-cpp//absl/time",
        "@grpc//:grpc++",
    ],
)

cc_library(
    name = "dataplane_matchers",
    testonly = True,
    hdrs = ["dataplane_matchers.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":dataplane_client",
        "//grpc:dataplane_cc_proto",
        "//simulator:simulator_cc_proto",
        "@abseil-cpp//absl/container:btree",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "dataplane_matchers_test",
    srcs = ["dataplane_matchers_test.cc"],
    deps = [
        ":dataplane_matchers",
        "//grpc:dataplane_cc_proto",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "dataplane_client_test",
    srcs = ["dataplane_client_test.cc"],
    deps = [
        ":dataplane_client",
        ":fourward_server",
        "//grpc:dataplane_cc_proto",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/time",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "management_client_test",
    srcs = ["management_client_test.cc"],
    deps = [
        ":fourward_server",
        ":management_client",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/time",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "dataplane_client_e2e_test",
    srcs = ["dataplane_client_e2e_test.cc"],
    data = [
        "//e2e_tests/passthrough:passthrough_p4runtime",
        "//e2e_tests/sai_p4:sai_middleblock_binpb",
    ],
    local_defines = [
        'PASSTHROUGH_PIPELINE_RLOCATION=\\"$(rlocationpath //e2e_tests/passthrough:passthrough_p4runtime)\\"',
        'SAI_PIPELINE_RLOCATION=\\"$(rlocationpath //e2e_tests/sai_p4:sai_middleblock_binpb)\\"',
    ],
    deps = [
        ":dataplane_client",
        ":dataplane_matchers",
        ":fourward_server",
        ":management_client",
        "//grpc:dataplane_cc_proto",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@grpc//:grpc++",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
    ],
)

cc_test(
    name = "output_capture_test",
    srcs = ["output_capture_test.cc"],
    deps = [
        ":output_capture",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "fourward_server_test",
    srcs = ["fourward_server_test.cc"],
    data = ["//e2e_tests/passthrough:passthrough_p4runtime"],
    local_defines = [
        'PASSTHROUGH_PIPELINE_RLOCATION=\\"$(rlocationpath //e2e_tests/passthrough:passthrough_p4runtime)\\"',
    ],
    deps = [
        ":fourward_server",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@grpc//:grpc++",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
    ],
)
